# ai-career-discovery-assistant

./: .env.docker  .env.production.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OCR_IMPLEMENTATION.md  PDF_EXTRACTION_FIX.md  QUICK_DEPLOY_GUIDE.md  README.md  TASKS.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  test-resume.txt
backend/: .env.example  Dockerfile.dev  Dockerfile.prod  alembic.ini  pyproject.toml  requirements.txt  test_pdf_extraction.py
backend/alembic/: env_original.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: analysis.py  auth.py  career_paths.py  documents.py  test.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: analysis.py  base.py  career_recommendation.py  document.py  user.py
backend/app/schemas/: analysis.py  auth.py  document.py  user.py
backend/app/services/: document_processor.py  gemini_service.py  ocr_service.py  s3_service.py
backend/app/workers/: celery_app.py  tasks.py
docs/: authentication-implementation.md  history.md
frontend/: Dockerfile.dev  Dockerfile.prod  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/features/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/features/auth/components/: LoginForm.tsx  RegisterForm.tsx
frontend/src/features/career-analysis/: AnalysisPage.tsx
frontend/src/features/dashboard/: DashboardPage.tsx
frontend/src/features/document-upload/: UploadPage.tsx
frontend/src/features/home/: HomePage.tsx
frontend/src/features/profile/: ProfilePage.tsx
frontend/src/features/test/: TestPdfExtraction.tsx
scripts/: run-migrations-simple.sh  run-migrations.sh  setup-dev.sh
tests/: test_auth_flow.sh
